# uploader

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
assets/: index.css
frontend/: asset-manifest.json  index.html  manifest.json
frontend/static/css/: main.875ca88b.css  main.875ca88b.css.map
frontend/static/js/: main.2af7b16c.js  main.2af7b16c.js.map  main.fb734280.js  main.fb734280.js.map
src/: main.rs
src/config/: settings.rs
src/database/postgres/: database_pg.rs  mod.rs
src/email/: notification_manager.rs
src/feature_flags/: feature_flags.rs  mod.rs
src/middleware/: ip.rs  mod.rs  stripe_event_payload.rs  uploader.rs  user.rs
src/models/: mod.rs
src/models/auth/: mod.rs  payloads.rs  user.rs
src/models/stripe/: payloads.rs
src/models/tokens/: mod.rs  upload_tokens.rs  view_tokens.rs
src/models/uploads/: payloads.rs
src/routes/: auth.rs  mod.rs  views.rs
src/routes/billing/: api.rs
src/routes/dashboard/api/: account.rs  mod.rs  upload_tokens.rs  uploads.rs  uploads.rs.orig  view_tokens.rs
src/routes/stripe/: stripe.rs
src/util/: databases.rs  errors.rs  format_upload_url.rs  initialize_handlebars.rs  mod.rs  preflight.rs  priceid_map.rs  string_generator.rs  verify_hex_color.rs
views/: file.hbs  index.html  new_email_changed_notification.email.hbs  old_email_changed_notification.email.hbs  password_change.email.hbs  verify_email.email.hbs
