[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
tokio-postgres = "0.7.10"
tokio = "1.34.0"
rand = "0.8.5"
handlebars = "5.0.0"
serde_json = "1.0.108"
bcrypt = "0.15.0"
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.193", features = ["derive"] }
lettre = { version = "0.11.2" }
regex = "1.10.3"
